--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="card">
 		<div class="card-body">
 			<p><span class="text-primary"><b>I6RC</span></b> этот репозиторий для ios6</p>
-			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://supermamon.github.io/Reposi3/">Add to Cydia</a>
+			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://artymaster1598.github.io/I6RC/">Add to Cydia</a>
 		</div>
 	</div>
 </div>
